# CaiBot

./: .env  .gitignore  README.md  bot.db.example  bot.py  bot.spec  config.py  config.py.example  item.json  pyproject.toml
caibot/: __init__.py  command_msg.py  config.py  constants.py  downloader_api.py  steamapi.py  utils.py
caibot/command/: __init__.py  admin.py  black_list.py  black_list_action.py  black_list_view.py  bot.py  group_admin_cmd.py  help.py  review.py  workshop.py
caibot/db/: __init__.py  ban_record_repo.py  ban_request_repo.py  check_log_repo.py  database.py  group_admin_repo.py  group_repo.py  user_repo.py
caibot/dependency/: __init__.py  args.py  group.py  group_admin_repo.py  group_admins.py  group_repo.py  permission.py  session.py  user.py  user_repo.py
caibot/event/: __init__.py  group_join.py  invite_request.py  join_request.py  message.py
caibot/model/: base.py  mod.py  workshop.py
common/: bag_png_helper.py  ban_request.py  ban_user.py  edge_helper.py  global_const.py  group.py  group_helper.py  packet.py  process_png_helper.py  server.py  server_settings.py  sql.py  statistics.py  terraria_id_helper.py  text_handle.py  user.py
plugins/: API.py  cai_api.py  chat_sync.py  commands.py  event_handle.py  github_api.py
terraria_id/: Buff_ID.json  Item_ID.json  NPC_ID.json  Prefix_ID.json  Project_ID.json
utils/: bag_png_helper.py  ban.py  ban_user.py  edge.py  edge_helper.py  group.py  group_helper.py  server.py  server_helper.py  server_settings.py  sql.py  statistics.py  terraria_id_helper.py  text_handle.py  user.py
(+16 files in other folders)
